--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="skill-row">
                 <img class="Design" src="https://img.freepik.com/free-vector/gradient-coding-logo-template_23-2148809439.jpg?w=740&t=st=1672487473~exp=1672488073~hmac=231bb2d3461951d9776de1d5fe1e7753b02b8d56ce866e2067c4e44bc21d21f1" alt="">
                 <h3>Design and development</h3>
-                <p>I am a positive, enthusiastic and competent Web Developer who, has built up a diverse range of skillsand qualities and I always try my best to improvise myself better on this role.</p>
+                <p>I am a positive, enthusiastic and competent Web Developer who, has built up a diverse range of skills and qualities and I always try my best to improve and further enhance myself at this role.</p>
             </div>
         </div>
         <hr>
